syntax = "proto3";

package elastic.apm.v1;

option go_package = "/modelpb";

message Kubernetes {
  string namespace = 1;
  string node_name = 2;
  string pod_name = 3;
  string pod_uid = 4;
}
